test/corpus/fail/issue-3585c.mo
=========
issue-3585c.mo
=========

import F = "issue-3585/Field";

actor {
}

---

(source_file
  (import
    (var_pat
      (identifier))
    (text_literal))
  (obj_dec
    (obj_sort)
    (obj_body)))
